# openpo

./: .dockerignore  .gitignore  404.html  CNAME  README.md  Taskfile.yaml  docker-compose.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yaml
api/: index.html
completions/: index.html
demo/: Dockerfile  ui.py
dev_resources/: init.sql
docs/: api.md  completions.md  errors.md  evaluations.md  index.md  installation.md  json.md  notebook.md  parameters.md  preference.md  provider.md  quickstart.md  research.md  resource.md  response.md  storage.md  usage.md
errors/: index.html
evaluations/: index.html
installation/: index.html
json/: index.html
notebook/: index.html
openpo/: client.py
openpo/internal/: error.py  helper.py  prompt.py
openpo/resources/batch/: batch.py
openpo/resources/chat/: completions.py
openpo/resources/completion/: completion.py
openpo/resources/provider/: anthropic.py  huggingface.py  openai.py  openrouter.py
openpo/storage/: huggingface.py  s3.py
paper/: index.html
parameters/: index.html
peony/: client.py  ui.py
peony/internal/: helper.py  prompt.py  storage.py
peony/resources/beta/: beta.py
peony/resources/beta/chat/: chat.py  completions.py
peony/resources/chat/: chat.py  completions.py
preference/: index.html
provider/: index.html
quickstart/: index.html
resource/: index.html
response/: index.html
search/: search_index.json
storage/: index.html
stream/: index.html
usage/: index.html
