[tool.poetry]
name = "peony"
version = "0.1.0"
description = ""
authors = ["Daniel Lee <dannylee1020@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
openai = "^1.51.0"
httpx = "^0.27.2"
streamlit = "^1.39.0"
psycopg = "3.2.1"
typing-extensions = "4.11.0"
pydantic = "^2.9.2"
litellm = "^1.52.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
