[tool.poetry]
name = "peony"
version = "0.1.0"
description = "Preference Optimization made easy"
authors = ["Daniel Lee <dannylee1020@gmail.com>"]
license = "Apache-2.0"
keywords = ["llm", "finetuning", "preference optimization, rlhf"]
include = ["LICENSE", "README.md"]
repository = "https://github.com/dannylee1020/peony"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"
litellm = "^1.52.0"


[tool.poetry.group.dev.dependencies]
boto3 = "^1.35.57"
psycopg = {extras = ["binary"], version = "^3.2.1"}
streamlit = "^1.39.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

